--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <a href="#about" class="scroll-down">
-        <img src="arrow-down.png" alt="scroll-down">
+        <img src="../project html css 2/img/arrow-down.png" alt="scroll-down">
     </a>
 </section>
 <!--home section end-->
@@ -56,7 +56,7 @@
                   <div class="shape-02">
 
                   </div>
-                 <img src="../project html css 2/IMG_0622.JPG" alt="about me">
+                 <img src="../project html css 2/img/IMG_0622.JPG " alt="about me">
               </div>
           </div>
           <div class="about-content">
